--- a/view/page/home.templ
+++ b/view/page/home.templ
@@ -6,7 +6,7 @@ templ main() {
       <h1 class="text-2xl font-semibold text-gray-900">
         Shorten a long link
       </h1>
-      <form action="/url" class="flex gap-2">
+      <form action="/url" method="post" class="flex gap-2">
         <input
           type="url"
           id="originalUrl"
